# colorhug-plus-firmware

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  bootloader.c  ch-config.c  ch-errno.c  ch-flash.c  ch-sram.c  ch-sram.h  configure.ac  firmware.metainfo.xml  usb_config.h  usb_config_bootloader.h  usb_config_firmware.h  usb_descriptors_bootloader.c  usb_descriptors_firmware.c
package/: Makefile.am  firmware.metainfo.xml.in
src/: ColorHug.h  Makefile.am  Makefile.old  ch-config.c  ch-config.h  ch-errno.c  ch-errno.h  ch-flash.c
src/bootloader/: Makefile.am  bootloader.c  usb_config.h  usb_descriptors.c
src/firmware/: Makefile.am  ch-client.c  ch-client.h  ch-common.h  ch-device.c  ch-device.h  firmware.c  host.c  mti_23k640.c  mti_23k640.h  mti_tcn75a.c  mti_tcn75a.h  mzt_mcdc04.c  mzt_mcdc04.h  oo_elis1024.c  oo_elis1024.h  usb_config.h  usb_descriptors.c
src/firmware-wobble/: Makefile.am  firmware.c  usb_config.h  usb_descriptors.c
